# superworldcon-rust-server

./: .env  Cargo.toml  Dockerfile  README.md
migrations/20170211131857_create_initial_db/: up.sql
migrations/2020-06-28-145656_sample_contest/: down.sql  up.sql
migrations/20200626031545_create_contest/: down.sql  up.sql
src/: config.rs  main.rs  responses.rs  schema.rs
src/apis/: contest.rs  contests.rs  mod.rs  ping.rs  tournament.rs  user.rs
src/models/: contest.rs  mod.rs  tournament.rs  user.rs
src/utils/: json.rs
