[package]
name = "superworldcon"
version = "0.1.0"
authors = ["smilu97 <smilup2244@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_cors = "0.5.1"
serde = "1.0.0"
serde_json = "1.0.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
