[package]
name = "superworldcon"
version = "0.1.0"
authors = ["smilu97 <smilup2244@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_cors = "0.5.1"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "chrono", "serde_json"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
superslice = "1"
argon2rs = "0.2"
rand = "0.7"
ring = "0.13"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]
